--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Sample Project</title>
 </head>
 <body>
-    welcome to html page.
+    <h1>Welcome to the Sample Project</h1>
 </body>
 </html>
