--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Sample Project</title>
 </head>
 <body>
+
+    
     <h1>Welcome to the Sample Project</h1>
+    <p>This is a simple HTML file for demonstration purposes.</p>
+
+
+    <footer>
+        <p>&copy; 2024 Sample Project</p>
+    </footer>
+
 </body>
 </html>
